# aprilcube

./: .gitignore  README.md  pyproject.toml  result.json  running_notes.md
docs/: dex3_engineering_report.html  dex3_safe_cube_design.md  paper.bib  paper.tex  usage.md
examples/: chair_target.yaml  cuboid_target.yaml  dex3_safe_cube.yaml  l_shape_target.yaml  plus_shape_target.yaml  spiral_tower_target.yaml  stair_step_target.yaml  t_shape_target.yaml  t_shape_target_large.yaml  u_shape_target.yaml  window_frame_target.yaml  zigzag_snake_target.yaml
models/1x1x1_24_cube/: cube.3mf
models/1x1x1_30_cube/: cube.3mf
models/2x1x1_24_cube/: cube.3mf
models/2x1x1_30_cube/: cube.3mf
models/2x2x1_24_cube/: cube.3mf
models/2x2x1_30_cube/: cube.3mf
models/2x2x2_24_cube/: cube.3mf
models/2x2x2_30_cube/: cube.3mf
models/3x1x1_24_cube/: cube.3mf
models/3x1x1_30_cube/: cube.3mf
models/3x2x1_24_cube/: cube.3mf
models/3x2x1_30_cube/: cube.3mf
models/3x2x2_30_cube/: cube.3mf
models/3x3x1_24_cube/: cube.3mf
models/3x3x1_30_cube/: cube.3mf
models/3x3x2_30_cube/: cube.3mf
models/3x3x3_18_cube/: README.md  config.json  cube.3mf
models/3x3x3_24_cube/: cube.3mf
models/3x3x3_30_cube/: cube.3mf
models/4x2x2_18_cube/: README.md  config.json  cube.3mf
models/4x3x1_24_cube/: cube.3mf
models/4x3x1_30_cube/: cube.3mf
models/5x2x2_12_cube/: README.md  config.json  cube.3mf
models/5x2x2_18_cube/: README.md  config.json  cube.3mf
models/5x3x1_30_cube/: cube.3mf
models/5x4x1_30_cube/: README.md  config.json  (+1 more)
tests/: test_generate.py  test_web_app.py
(+66 files in other folders)
