[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aprilcube"
version = "0.2.0"
description = "Generate and detect ArUco/AprilTag cubes for 6-DOF pose estimation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "manifold3d>=3.5",
    "opencv-contrib-python>=4.8",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
aprilcube = "aprilcube.cli:main"
